[package]
name = "docker2rootfs"
description = "A tool to convert a docker image to a rootfs."
version = "0.1.0"
repository = "https://github.com/chantra/bpfcitools/tree/main/docker2rootfs"
readme = "README.md"
edition = "2021"
license = "BSD-2"

[dependencies]
anyhow = "1"
clap = { version = "4.4.18", features = ["derive", "string"] }
dkregistry = { version = "0.5.1-alpha.0", git = "https://github.com/chantra/camallo-dkregistry-rs.git", branch = "wip" }
#dkregistry = { path = '../../camallo-dkregistry-rs' }
env_logger = "0.10"
futures = "0.3"
libflate = "2"
tar = "0.4"
thiserror = "1"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = "0.3"
users = "0.11"
