[package]
name = "docker2rootfs"
description = "A tool to convert a docker image to a rootfs."
version = "0.1.0"
repository = "https://github.com/chantra/bpfcitools/tree/main/docker2rootfs"
readme = "README.md"
edition = "2021"
license = "BSD-2"

[dependencies]
anyhow = "1"
clap = { version = "4.4.18", features = ["derive", "string"] }
oci-distribution = "0.10"
env_logger = "0.10"
futures = "0.3"
libflate = "2"
tar = "0.4"
thiserror = "1"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = "0.3"
users = "0.11"
